Prioritize owned claims on claim selection GUI